testsuite/tests/safeHaskell/flags/SafeFlags17.hs
{-# LANGUAGE Safe #-}
{-# OPTIONS_GHC -fpackage-trust #-}
-- | Basic test to see if Safe flags compiles
module SafeFlags17 where

f :: Int
f = 1

